--- a/3ca.htm
+++ b/3ca.htm
@@ -1,7 +1,7 @@
-<!doctype html>
+<!Doctype html>
 <html lang="en">
 <head>
-<title>hacked by 3xp1r3</title>
+<title>Hacked by 3xp1r3</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
 <meta name="Author" content="3xp1r3"/>
 <meta name="copyright" content="3xp1r3"/>
@@ -28,6 +28,8 @@ font-family: 'Iceland', cursive;
 <img src="http://i61.tinypic.com/10531ts.png" width="450px"/>
 <br/>
 <h2><font color="orange">Nothing is deleted<br/>Your system security is low<br/>Patch your system</font></h2>
+<br/><br/>
+<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook.com%2FWiX3CA&width=94&layout=button&action=like&size=small&show_faces=false&share=true&height=65&appId" width="94" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 <br/><br/><br/>
 <div><strong><font color="white">GreeTz tO:</font><marquee direction="left" behavior="scroll" scrollamount="2" scrolldelay="10" width="50%">
 <img src="https://image.flaticon.com/icons/svg/139/139259.svg" height="25" width="25">no-pm
@@ -50,11 +52,6 @@ font-family: 'Iceland', cursive;
 <img src="https://image.flaticon.com/icons/svg/139/139259.svg" height="25" width="25">All other members and fans of 3xp1r3 Cyber Army
 <img src="https://image.flaticon.com/icons/svg/139/139259.svg" height="25" width="25">All Muslim hackers
 <img src="https://image.flaticon.com/icons/svg/139/139259.svg" height="25" width="25"></strong></marquee></div><br/>
-<!--
-Hacked by Frank Wix
-fb.com/WiX.3CA
-3xp1r3 Cyber Army
--->
 <iframe style="border:none;" width="0px" height="0px" src="https://www.youtube.com/embed/-j0dlcfekqw?&autoplay=1&loop=10" ></iframe>
 </div>
 </body>
